--- a/views/index.jade
+++ b/views/index.jade
@@ -3,3 +3,9 @@ extends layout
 block content
   h1 Crimson Hexagon Fake API Service
   p This is a testing ground for future frontend projects.
+
+  ul
+  - each route in routes
+    li
+      = route[2]
+
