--- a/views/index.jade
+++ b/views/index.jade
@@ -1,11 +1,13 @@
 extends layout
 
 block content
-  h1 Crimson Hexagon Fake API Service
+  h1=title
   p This is a testing ground for future frontend projects.
 
   ul
   - each route in routes
     li
-      = route[2]
+      a(href="" + route[1])
+        =route[1]
+
 
